# pre-wgsl

./: CMakeLists.txt  README.md
.github/workflows/: deploy.yml
examples/cli/: CMakeLists.txt  shader.wgsl  utils.wgsl
include/: wgslpp.hpp
tests/: test_preprocessor.cpp
